# simple_card_game

./: CMakeLists.txt  main.cpp
classes/: Player.cpp  Player.h  card.cpp  card.h
libraries/: enums.h
toolbox/: toolbox.cpp  toolbox.h
